[gd_scene load_steps=6 format=3 uid="uid://bxp0hhpdubjky"]

[ext_resource type="Texture2D" uid="uid://cbrn8x7iydw63" path="res://Assets/GUI/vertical-medium.png" id="1_0vjqg"]
[ext_resource type="Script" path="res://detailed_room_info.gd" id="1_kltg5"]
[ext_resource type="PackedScene" uid="uid://b220oo4s6vl43" path="res://mission_enemy_panel.tscn" id="2_m4fqc"]
[ext_resource type="FontFile" uid="uid://uqx0pemtyyk7" path="res://Themes/zekton rg.otf" id="3_sgklb"]
[ext_resource type="Texture2D" uid="uid://5ishrvrpc8ew" path="res://Assets/Unknown.png" id="4_l5xc7"]

[node name="DetailedRoomInfo" type="Node2D"]
script = ExtResource("1_kltg5")

[node name="Vertical-medium" type="Sprite2D" parent="."]
position = Vector2(325.48, 455.53)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_0vjqg")

[node name="RoomName" type="Label" parent="."]
offset_left = 110.47
offset_top = 9.51
offset_right = 530.47
offset_bottom = 41.51
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 26
text = "ENEMY"
horizontal_alignment = 1

[node name="EnemyPanel" parent="." instance=ExtResource("2_m4fqc")]
offset_left = 384.74
offset_top = 83.58
offset_right = 384.74
offset_bottom = 83.58
scale = Vector2(0.9, 0.9)

[node name="SpecialsGrid" type="GridContainer" parent="."]
offset_left = 20.13
offset_top = 276.28
offset_right = 20.13
offset_bottom = 776.28
theme_override_constants/v_separation = 99

[node name="Special1" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special1"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special1"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special2" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special2"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special2"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special3" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special3"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special3"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special4" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special4"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special4"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special5" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special5"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special5"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="Special6" type="Control" parent="SpecialsGrid"]
layout_mode = 2

[node name="Name" type="Label" parent="SpecialsGrid/Special6"]
layout_mode = 0
offset_left = -8.72
offset_top = -14.25
offset_right = 591.27
offset_bottom = 6.74
theme_override_font_sizes/font_size = 16
text = "Explosive Missles"
autowrap_mode = 2

[node name="Description" type="Label" parent="SpecialsGrid/Special6"]
layout_mode = 0
offset_left = 2.16
offset_top = 7.01
offset_right = 630.16
offset_bottom = 85.01
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_sgklb")
theme_override_font_sizes/font_size = 18
text = "Deals 21 damage spread over every allied unit in a diamond tile area, centered on a random allied unit"
autowrap_mode = 2

[node name="BossSprite" type="Sprite2D" parent="."]
position = Vector2(138.54, 135.00)
scale = Vector2(0.24, 0.24)
texture = ExtResource("4_l5xc7")

[node name="BossName" type="Label" parent="."]
offset_left = 214.43
offset_top = 69.92
offset_right = 637.43
offset_bottom = 95.92
theme_override_font_sizes/font_size = 21
text = "NAME"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 11.77
offset_top = 233.52
offset_right = 208.77
offset_bottom = 252.52
theme_override_font_sizes/font_size = 16
text = "Specials Per Turn:"

[node name="SpecialsPerTurn" type="Label" parent="."]
offset_left = 227.53
offset_top = 234.14
offset_right = 267.53
offset_bottom = 255.14
theme_override_font_sizes/font_size = 16
text = "2"
